@@ -34,6 +34,7 @@ Other features
  * Draft page view is now restricted to users with edit / publish permission over the page (Kees Hink)
  * Added the option to delete a previously saved focal point on a image (Maarten Kling)
  * Page explorer menu item, search and summary panel are now hidden for users with no page permissions (Tim Heap)
+ * Added support for custom date and datetime formats in input fields (Bojan Mihelac)
 
 
 Bug fixes
