@@ -17,8 +17,13 @@ from django.utils.translation import ugettext_lazy as _
 from taggit.forms import TagWidget
 
 from wagtail.utils.widgets import WidgetWithScript
+from wagtail.wagtailadmin.datetimepicker import to_datetimepicker_format
 from wagtail.wagtailcore import hooks
 from wagtail.wagtailcore.models import Page
+
+
+DEFAULT_DATE_FORMAT = '%Y-%m-%d'
+DEFAULT_DATETIME_FORMAT = '%Y-%m-%d %H:%M'
 
 
 class AdminAutoHeightTextInput(WidgetWithScript, widgets.Textarea):
@@ -35,16 +40,21 @@ class AdminAutoHeightTextInput(WidgetWithScript, widgets.Textarea):
 
 
 class AdminDateInput(WidgetWithScript, widgets.DateInput):
-    # Set a default date format to match the one that our JS date picker expects -
-    # it can still be overridden explicitly, but this way it won't be affected by
-    # the DATE_INPUT_FORMATS setting
-    def __init__(self, attrs=None, format='%Y-%m-%d'):
-        super(AdminDateInput, self).__init__(attrs=attrs, format=format)
+    def __init__(self, attrs=None, format=None):
+        fmt = format
+        if fmt is None:
+            fmt = getattr(settings, 'WAGTAIL_DATE_FORMAT', DEFAULT_DATE_FORMAT)
+        self.js_format = to_datetimepicker_format(fmt)
+        super(AdminDateInput, self).__init__(attrs=attrs, format=fmt)
 
     def render_js_init(self, id_, name, value):
+        config = {
+            'dayOfWeekStart': get_format('FIRST_DAY_OF_WEEK'),
+            'format': self.js_format,
+        }
         return 'initDateChooser({0}, {1});'.format(
             json.dumps(id_),
-            json.dumps({'dayOfWeekStart': get_format('FIRST_DAY_OF_WEEK')})
+            json.dumps(config)
         )
 
 
@@ -57,13 +67,21 @@ class AdminTimeInput(WidgetWithScript, widgets.TimeInput):
 
 
 class AdminDateTimeInput(WidgetWithScript, widgets.DateTimeInput):
-    def __init__(self, attrs=None, format='%Y-%m-%d %H:%M'):
-        super(AdminDateTimeInput, self).__init__(attrs=attrs, format=format)
+    def __init__(self, attrs=None, format=None):
+        fmt = format
+        if fmt is None:
+            fmt = getattr(settings, 'WAGTAIL_DATETIME_FORMAT', DEFAULT_DATETIME_FORMAT)
+        self.js_format = to_datetimepicker_format(fmt)
+        super(AdminDateTimeInput, self).__init__(attrs=attrs, format=fmt)
 
     def render_js_init(self, id_, name, value):
+        config = {
+            'dayOfWeekStart': get_format('FIRST_DAY_OF_WEEK'),
+            'format': self.js_format,
+        }
         return 'initDateTimeChooser({0}, {1});'.format(
             json.dumps(id_),
-            json.dumps({'dayOfWeekStart': get_format('FIRST_DAY_OF_WEEK')})
+            json.dumps(config)
         )
 
 
